added dtos for all models
